# solanaceae_tox

./: CMakeLists.txt  README.md
solanaceae/tox_contacts/: components.hpp  components_id.inl  tox_components_to_string.cpp  tox_components_to_string.hpp  tox_contact_model2.cpp  tox_contact_model2.hpp
solanaceae/tox_messages/: components.hpp  components_id.inl  msg_components.hpp  msg_components_id.inl  obj_components.hpp  obj_components_id.inl  tox_message_manager.cpp  tox_message_manager.hpp  tox_transfer_manager.cpp  tox_transfer_manager.hpp
solanaceae/tox_messages/backends/: tox_ft_filesystem.cpp  tox_ft_filesystem.hpp
solanaceae/tox_messages/nj/: tox_message_components.hpp  tox_message_components_serializer.hpp
